* core: add WEECHAT_HOME option in cmake and configure to setup default
  WeeChat home (default is "~/.weechat") (task #11266)
* core: add optional arguments for command /plugin load/reload/autoload
* core: fix compilation error with "pid_t" on Mac OS X (bug #34639)
* core: enable background process under Cygwin to connect to servers, fix
  reconnection problem (bug #34626)
* api: add support of URL in hook_process/hook_process_hashtable (task #10247)
* api: add new functions strcasecmp_range, strncasecmp_range,
  string_regex_flags, string_regcomp, hashtable_map_string,
  hook_process_hashtable, hdata_check_pointer, hdata_char, hdata_hashtable and
  nicklist_get_next_item
* alias: add default alias umode => /mode $nick
* aspell: fix URL detection (do not check spelling of URLs) (bug #34040)
* irc: add options irc.look.highlight_{server|channel|pv} to customize or
  disable default nick highlight (task #11128)
* irc: use low priority for MODE sent automatically by WeeChat (when joining
  channel)
* irc: use extended regex in commands /ignore and /list
* irc: use redirection to get channel modes after update of modes on channel,
  display output of /mode #channel, allow /mode without argument (display modes
  of current channel or user modes on server buffer)
* irc: do not use option irc.look.nick_color_stop_chars for forced nick colors
  (bug #33480)
* irc: add optional server in info "irc_is_channel" (before channel name)
  (bug #35124), add optional server in info_hashtable "irc_message_parse"
* irc: reset read marker of current buffer on manual /join
* irc: fix crash when signon time in message 317 (whois, idle) is invalid
  (too large) (bug #34905)
* irc: do not delete servers added in irc.conf on /reload (bug #34872)
* irc: remove autorejoin on channels when disconnected from server (bug #32207)
* irc: display messages kick/kill/mode/topic even if nick is ignored
  (bug #34853)
* irc: add case insensitive string comparison based on casemapping of server