@@ -42,6 +42,7 @@ Version 0.3.7 (under dev!)
 * core: fix compilation error with "pid_t" on Mac OS X (bug #34639)
 * core: enable background process under Cygwin to connect to servers, fix
   reconnection problem (bug #34626)
+* api: add modifier "input_text_for_buffer"
 * api: add support of URL in hook_process/hook_process_hashtable (task #10247)
 * api: add new functions strcasecmp_range, strncasecmp_range,
   string_regex_flags, string_regcomp, hashtable_map_string,
